test/source/carehub/main/default/objects/MedicalReport__c/MedicalReport__c.object-meta.xml
<CustomObject>
    <label>Medical Report</label>
    <nameField>
        <label>Medical Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>