test/source/carehub/main/default/objects/MedicalReport__c/fields/ActionFor__c.field-meta.xml
<CustomField>
    <fullName>ActionFor__c</fullName>
    <label>Action for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>