test/source/carehub/main/default/objects/MedicalReport__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <length>100</length>
    <type>Text</type>
</CustomField>