test/source/carehub/main/default/objects/MedicalReport__c/fields/AuthorRole__c.field-meta.xml
<CustomField>
    <fullName>AuthorRole__c</fullName>
    <label>Author Role</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>