test/source/carehub/main/default/objects/MedicalReport__c/fields/ExternalUpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>ExternalUpdatedAt__c</fullName>
    <inlineHelpText>This is the last updated date time coming from ECD</inlineHelpText>
    <label>External Updated At</label>
    <type>DateTime</type>
</CustomField>