test/source/carehub/main/default/objects/MedicalReport__c/fields/VisibilityFor__c.field-meta.xml
<CustomField>
    <fullName>VisibilityFor__c</fullName>
    <label>Visibility for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>